--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ matrix:
         - npm run build
     - language: java
       jdk: oraclejdk8 
-      before_script: 
+      before_install:
+        - chmod +x mvnw 
         - cd Ebar-Backend
