--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ matrix:
         - npm install
         - npm run build
     - language: java
-      jdk: oraclejdk8 
+      jdk: oraclejdk8
       before_install:
-        - chmod +x mvnw 
         - cd Ebar-Backend
+        - chmod +x mvnw 
+      script:
+        - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install
