--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,19 @@ matrix:
         - npm run build
     - language: java
       jdk: oraclejdk8
+      services:
+        - mysql
+      addons:
+        apt:
+          packages:
+            - mysql-server-8.0.22
+            - mysql-client-core-8.0.22
+            - mysql-client-8.0.22
       before_install:
         - cd Ebar-Backend
         - chmod +x mvnw 
+        - mysql -u root -e 'CREATE DATABASE ebarbbdd;'
+        - mysql -u root -e 'CREATE USER 'ebar'@'localhost' IDENTIFIED BY 'ebar';'
+        - mysql -u root -e 'GRANT ALL ON ebarbbdd.* TO 'ebar'@'localhost';'
       script:
         - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install
