--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ matrix:
       services:
         - mysql
       before_install:
-        - mysql -u root < bbdd_Travis.sql
         - cd Ebar-Backend
         - chmod +x mvnw 
+        - mysql -e 'CREATE DATABASE IF NOT EXISTS ebarbbdd;'
       script:
         - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install
