--- a/Ebar-Backend/src/main/resources/application.properties
+++ b/Ebar-Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url= jdbc:mysql://127.0.0.1:3306/ebarbbdd?user=ebar&serverTimezone=UTC
-spring.datasource.username= root
+spring.datasource.username= ebar
 spring.datasource.password= @Q1R2s3u4
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
