--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ matrix:
       addons: 
         apt:
           sources:
-            -mysql-5.7-trudty
+            - mysql-5.7-trudty
           packages:
-            -mysql-server
+            - mysql-server
+            - mysql-client 
       dist: trusty
       sudo: required
       before_install:
