--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
       addons: 
         apt:
           sources:
-            - mysql-5.7-trudty
+            - mysql-5.7-trusty
           packages:
             - mysql-server
             - mysql-client 
