--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ matrix:
           sources:
             - mysql-5.7-trusty
           packages:
-            - mysql-server
-            - mysql-client 
+            - mysql-server-5.7
+            - mysql-client-5.7
       dist: trusty
       sudo: required
       before_install:
