--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,5 @@ matrix:
         - mysql -u root -e 'CREATE DATABASE ebarbbdd;'
         - mysql -u root -e "CREATE USER 'ebar'@'localhost' IDENTIFIED BY 'ebar';"
         - mysql -u root -e "GRANT ALL ON ebarbbdd.* TO 'ebar'@'localhost';"
+        - myslq -u root -e "SET PASSWORD FOR 'ebar'@'localhost' = '@Q1R2s3u4';"
         - ./mvnw clean install -B
