--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,6 @@ matrix:
         - chmod +x mvnw 
         - mysql -u root -e 'CREATE DATABASE ebarbbdd;'
         - mysql -u root -e "CREATE USER 'ebar'@'localhost' IDENTIFIED BY 'ebar';"
-        - mysql -u root -e "SET PASSWORD FOR 'ebar'@'localhost' = '@Q1R2s3u4';"
+        - mysql -u root -e "SET PASSWORD FOR 'ebar'@'localhost' = '405131523273337534';"
         - mysql -u root -e "GRANT ALL ON ebarbbdd.* TO 'ebar'@'localhost';"
         - ./mvnw clean install -B
