--- a/Ebar-Backend/src/main/resources/application.properties
+++ b/Ebar-Backend/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto= update
 
 spring.app.jwtSecret= secretKey
 spring.app.jwtExpirationMs= 86400000
+
+logging.level.com.baeldung.testloglevel=DEBUG
+logging.level.root=INFO
