--- a/Ebar-Backend/pom.xml
+++ b/Ebar-Backend/pom.xml
@@ -17,6 +17,9 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <sonar.projectKey>ebarApp</sonar.projectKey>
+        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+        <sonar.coverage.exclusions>**/*.js</sonar.coverage.exclusions>
     </properties>
 
     <dependencies>
